--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   video_player: ^2.8.5
   dio: ^5.4.3+1
   freezed: ^2.5.2
+  flutter_screenutil: ^5.9.0
+
 
 dev_dependencies:
   flutter_test:
