--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   dartz: ^0.10.1
   flutter_bloc: ^8.1.5
   bloc: ^8.1.4
+  cached_network_image: ^3.3.1
   video_player: ^2.8.5
+  carousel_slider: ^4.2.1
   dio: ^5.4.3+1
   freezed: ^2.5.2
 
